# influence-os

./: .gitignore  README.md
Configurations/: image_style.yaml
Prompts/: article.md  discovery.md  ethics_checklist.md
Scripts/: proto-run.sh  scaffold_missing_routers.sh
ab_experiments/configs/: headline_variants.yaml
apps/api-gateway/: pyproject.toml
apps/api-gateway/app/: config.py  deps.py  main.py
apps/api-gateway/app/agents/: __init__.py  content_agent.py  image_agent.py  research_agent.py  router.py
apps/api-gateway/app/auth/: jwt.py  oauth.py
apps/api-gateway/app/openapi/: openapi.json
apps/api-gateway/app/routers/: __init__.py  abtests.py  analytics.py  calendar.py  calender.py  competitors.py  content.py  export.py  growth.py  hashtags.py  hastags.py  images.py  linkedin.py  moderation.py  profile.py  sentiment.py  strategy.py  stratergy.py  translate.py  trends.py  users.py
apps/api-gateway/influence_api_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web-frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web-frontend/src/app/: layout.tsx  page.tsx
apps/web-frontend/src/components/: ABTestWizard.tsx  AnalyticsCharts.tsx  CompetitorTable.tsx  ContentCalendar.tsx  HashtagHelper.tsx  LanguageSwitcher.tsx  PostCard.tsx  PostComposer.tsx  SentimentBadge.tsx  StrategyCanvas.tsx  TrendTicker.tsx
data/: competitors.json  hashtags.csv
data/examples/: sample_posts.jsonl
docs/: user_guide.md
prompts/content/: carousel_script.md  constraints.md  poll.md  text_post.md
scripts/: seed_demo_content.py
(+18 files in other folders)
